--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Depot</title>
-    <%= csrf_meta_tags %>
+
+<title>Pragprog Books Online Store</title>  
+  <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,6 +11,21 @@
   </head>
 
   <body class='<%= controller.controller_name %>'>
-    <%= yield %>
-  </body>
+    <div id="banner">
+      <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
+      <span class="title"><%= @page_title %></span>
+    </div>
+    <div id="columns">
+    <div id="side">
+    <ul>
+      <li><a href="http://www....">Home</a></li>
+      <li><a href="http://www..../faq">Questions</a></li>
+      <li><a href="http://www..../news">News</a></li>
+      <li><a href="http://www..../contact">Contact</a></li>
+    </ul>
+    </div>
+    <div id="main">
+<%= yield %>
+  </div>
+ </div>  </body>
 </html>
